Animated objects don't render #39523

Closed
opened 2014-03-31 00:25:07 +02:00 by Paulius Mscichauskas · 19 comments

System Information
Windows 7 64 bit
Nvidia Geforce GTX 560 TI

Blender Version
Broken: b99977a
Worked: Blender 2,7 official.

Short description of error
When worked: http://blenderartists.org/forum/attachment.php?attachmentid=299396&d=1396213617
Now: http://blenderartists.org/forum/attachment.php?attachmentid=299397&d=1396213634
Since the new motion blur features, blender does not render any animated objects.
Turning off motion blur globally makes everything render just fine, just no motion blur.
Turning off motion blur per object gets that object back into the render.
I noticed that the contents in the "Motion blur" panel, "object" tab, are greyed out whether motion blur is on or off.
I uploaded my main work file. I don't know how to reproduce this error with a new file.
I just removed the cloth sim, because the file was to big.
Good luck ant patience ;)

Exact steps for others to reproduce the error
Press F12 and see missing objects in the attached .blend file You_can_t_stop_me_STRAPPED_DOWN.blend.

**System Information** Windows 7 64 bit Nvidia Geforce GTX 560 TI **Blender Version** Broken: b99977a Worked: Blender 2,7 official. **Short description of error** When worked: http://blenderartists.org/forum/attachment.php?attachmentid=299396&d=1396213617 Now: http://blenderartists.org/forum/attachment.php?attachmentid=299397&d=1396213634 Since the new motion blur features, blender does not render any animated objects. Turning off motion blur globally makes everything render just fine, just no motion blur. Turning off motion blur per object gets that object back into the render. I noticed that the contents in the "Motion blur" panel, "object" tab, are greyed out whether motion blur is on or off. I uploaded my main work file. I don't know how to reproduce this error with a new file. I just removed the cloth sim, because the file was to big. Good luck ant patience ;) **Exact steps for others to reproduce the error** Press F12 and see missing objects in the attached .blend file [You_can_t_stop_me_STRAPPED_DOWN.blend](https://archive.blender.org/developer/F83511/You_can_t_stop_me_STRAPPED_DOWN.blend).

Changed status to: 'Open'

Changed status to: 'Open'
Brecht Van Lommel was assigned by Paulius Mscichauskas 2014-03-31 00:25:07 +02:00

Added subscriber: @freemind

Added subscriber: @freemind

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

I cannot confirm the bug, neither on CPU nor GPU (Geforce 540M). Windows 7 x64, b99977a

I cannot confirm the bug, neither on CPU nor GPU (Geforce 540M). Windows 7 x64, b99977a

Added subscriber: @willi-2

Added subscriber: @willi-2

2.70 official:
untitled.jpg

Latest build (f5b79df):
untitled1.jpg

2.70 official: ![untitled.jpg](https://archive.blender.org/developer/F83521/untitled.jpg) Latest build (f5b79df): ![untitled1.jpg](https://archive.blender.org/developer/F83523/untitled1.jpg)

This issue was referenced by blender/blender-addons-contrib@e05d35bfaf

This issue was referenced by blender/blender-addons-contrib@e05d35bfaffec69ed4d990f6a90a1b9244970aa4

This issue was referenced by e05d35bfaf

This issue was referenced by e05d35bfaffec69ed4d990f6a90a1b9244970aa4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e05d35bfaf.

Closed by commit e05d35bfaf.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

The problem is still there!
The_bug_is_still_there.jpg

This is the result the renderer gives in 2c00ecc on both GPU and CPU.

The problem is still there! ![The_bug_is_still_there.jpg](https://archive.blender.org/developer/F83633/The_bug_is_still_there.jpg) This is the result the renderer gives in 2c00ecc on both GPU and CPU.

Here's some new info!
Turning off renderability on modifiers get objects back in the render!

Here's some new info! Turning off renderability on modifiers get objects back in the render!

Aha! I found the problem!
In the performance settings, Render tab, "Cache BVH" was checked. Apparently the cached BVH was not compatible with the changes and blender got all confused. Better do something that would make other users avoid this confusion.

EDIT: Checking "Cache BVH" with "Use Spatial Splits" makes things not render. Unchecking either one makes all things render..... I am confused.

Aha! I found the problem! In the performance settings, Render tab, "Cache BVH" was checked. Apparently the cached BVH was not compatible with the changes and blender got all confused. Better do something that would make other users avoid this confusion. EDIT: Checking "Cache BVH" with "Use Spatial Splits" makes things not render. Unchecking either one makes all things render..... I am confused.

Ah, thanks for finding that, that's easy to fix then.

Ah, thanks for finding that, that's easy to fix then.

This issue was referenced by blender/blender-addons-contrib@7ed9d1b402

This issue was referenced by blender/blender-addons-contrib@7ed9d1b402c5d2a8d783a029ab2e4695cec88a05

This issue was referenced by 7ed9d1b402

This issue was referenced by 7ed9d1b402c5d2a8d783a029ab2e4695cec88a05

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7ed9d1b402.

Closed by commit 7ed9d1b402.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39523
No description provided.