Fix T39523: cycles cache BVH not working correct with deformation motion blur.